# sii-mac

./: CHANGELOG.md  CLAUDE.md  components.json  index.html  package-lock.json  package.json  skills-lock.json  vite.config.ts  vitest.config.ts
.claude/skills/: cross-platform-compatibility  desktop-app
.github/workflows/: ci.yml  release.yml  windows-build.yml
src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  progress.rs  utils.rs
src-tauri/src/commands/: backup.rs  config.rs  editor.rs  mod.rs  playsets.rs  profiles.rs  saves.rs  workshop.rs
src-tauri/src/playset/: drift.rs  io.rs  manager.rs  mod.rs  models.rs  store.rs
src-tauri/src/profile/: cloner.rs  detection.rs  manager.rs  metadata.rs  mod.rs  mod_scanner.rs  mod_writer.rs  models.rs  scanner.rs
src-tauri/src/save/: cache.rs  mod.rs  models.rs  reader.rs  writer.rs
src-tauri/src/sii/: mod.rs  parser.rs  types.rs  writer.rs
src-tauri/src/steam/: mod.rs  paths.rs  workshop_api.rs  workshop_cache.rs
src/components/: app-sidebar.tsx  mode-toggle.tsx  no-profile-selected.tsx  progress-overlay.tsx  theme-provider.tsx
src/hooks/: use-autofix-mode.ts  use-backup-retention.ts  use-game-detection.ts  use-mobile.ts  use-mutations.ts  use-profiles.ts  use-progress-stream.ts  use-save.ts
src/lib/: ats-cities.ts  bbcode.tsx  core-types.ts  form.tsx  format-error.ts  level-calc.ts  license-plate.ts  opener.ts  profile-context.tsx  query-keys.ts  save-utils.test.ts  save-utils.ts  streaming.test.ts  streaming.ts  tauri-commands.ts  truck-brands.ts  types.ts  wear-utils.ts
src/routes/: __root.tsx  backups.tsx  clone.tsx  compare.tsx  editor.$saveId.index.tsx  editor.$saveId.player.tsx  editor.$saveId.trailers.$trailerId.tsx  editor.$saveId.trailers.tsx  editor.$saveId.trucks.$truckId.tsx  editor.$saveId.trucks.tsx  editor.$saveId.tsx  editor.$saveId.world.tsx  index.tsx  mods.tsx  overview.tsx  saves.tsx  (+1 more)
(+87 files in other folders)
