[package]
name = "sii-mac"
version = "0.1.0"
description = "ATS/ETS2 Profile Editor for macOS"
authors = ["thedevdavid"]
edition = "2021"

[lib]
name = "sii_mac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
sii-decode-rs = { git = "https://github.com/fangyi-zhou/sii-decode-rs" }
