[package]
name = "sii-mac"
version = "1.2.0"
description = "ATS/ETS2 Profile Editor"
authors = ["thedevdavid"]
edition = "2021"

[lib]
name = "sii_mac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
dirs = "6"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
rayon = "1"
sii-decode-rs = { git = "https://github.com/fangyi-zhou/sii-decode-rs", rev = "6a1e9249459a85d71972aad58d2a1efef1ce3181" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.6"

[dev-dependencies]
tempfile = "3"
